[build-system]
requires = [
    # 56 was too low, no package installed for some reason
    "setuptools>=62",
    "setuptools_scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"



[tool.isort]
line_length = 88
profile = "black"


[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "fire",
]
ignore_missing_imports = true


[tool.pylint.MASTER]
ignore = ["_version.py"]

[tool.pylint.MISCELLANEOUS]
notes=["FIXME"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
]
good-names = ["e", "f", "m"]
bad-names=[]


[tool.setuptools_scm]
write_to = 'src/mkhelp/_version.py'


[tool.tox-constraints]
plugin_enabled = true
