[metadata]
name = mkhelp
version = attr: mkhelp._version.version
description = Support for docstrings in makefiles
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: MIT License

[options]
install_requires =
    more-itertools
package_dir=
    =src

[options.entry_points]
console_scripts =
    mkhelp = mkhelp.__main__:main

[options.packages.find]
where = src

[options.package_data]
mkhelp = py.typed
